# Vanguard

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/: test.txt
assets/shaders/: colormap.comp.glsl  gbuffer.frag.glsl  gbuffer.vert.glsl  march.comp.glsl  skybox.frag.glsl  skybox.vert.glsl
src/: Application.cpp  Application.h  Config.h  ImGuiWindow.cpp  ImGuiWindow.h  Input.cpp  Input.h  Logger.cpp  Logger.h  Scene.h  Scheduler.cpp  Scheduler.h  Window.cpp  Window.h  main.cpp
src/assets/: Asset.h  Assets.cpp  Assets.h  File.cpp  File.h  Mesh.h  SpirVShader.h  TextureData.h
src/game/: Camera.cpp  Camera.h  GameScene.cpp  GameScene.h  Skybox.cpp  Skybox.h
src/game/world/: Chunk.cpp  Chunk.h  ChunkLoader.cpp  ChunkLoader.h  ChunkManager.cpp  ChunkManager.h  Direction.h  Voxel.h  World.cpp  World.h  WorldGenerator.cpp  WorldGenerator.h
src/graphics/: Allocator.h  Buffer.h  FrameGraph.cpp  FrameGraph.h  FrameGraphBuilder.cpp  FrameGraphBuilder.h  RenderGraph.cpp  RenderGraph.h  RenderSystem.cpp  RenderSystem.h  ResourceManager.cpp  ResourceManager.h  Stager.cpp  Stager.h  Texture.h  VertexInput.h  Vulkan.cpp  Vulkan.h
src/util/: AABB.h  Frustum.h  Hash.h  Singleton.h  Timer.h  TypeTraits.h
src/world/: Camera.cpp  Camera.h  WorldScene.cpp  WorldScene.h
src/world/terrain/: Chunk.cpp  Chunk.h  Terrain.cpp  Terrain.h  TerrainConstants.h  TerrainGenerator.cpp  TerrainGenerator.h  Voxel.cpp  Voxel.h
